Make <a> elements around icons `display: inline-block` to prevent whitespace issues.
Hovering caused an underline to appear in adjacent space. As inline elements,
adjacent whitespace (both inside and outside) is collapsed but not removed.

--- a/style.css
+++ b/style.css
@@ -54,9 +54,9 @@ header address {
 header address svg.feather { vertical-align: -1px; font-size: small; }
 header > div a { text-decoration: none; }
 header > div a:hover { text-decoration: underline; }
-header > div a.email, header > div nav { display: inline-block; }
+header a.email, header nav, header nav > a { display: inline-block; }
 nav * { vertical-align: bottom; }
-nav svg.feather { font-size: 16pt; margin-right: 2px; }
+nav svg.feather { font-size: 16pt; margin-inline-start: 2px; }
 nav svg.feather:hover { stroke: url(#grad); }
 
 section { margin-block: 2rem; }
